# network-package-analyzer

./: HowToRun.txt  README.md  guide.txt  theory.txt
network-packet-analyzer/: CMakeLists.txt
network-packet-analyzer/include/npa/: analytics.hpp  config.hpp  packet.hpp  parser.hpp  pcap_capture.hpp  pcap_writer.hpp  stats.hpp  util.hpp
network-packet-analyzer/src/: analytics.cpp  config.cpp  main.cpp  parser.cpp  pcap_capture.cpp  pcap_writer.cpp  stats.cpp  util.cpp
